--- a/texts/xchrip00_bp-20-literatura-bibliography.bib
+++ b/texts/xchrip00_bp-20-literatura-bibliography.bib
@@ -203,7 +203,7 @@
   }
 
   @MISC{hornicky,
-    author = {Bc. PAVOL HORNICKÝ},
+    author = {{Bc. PAVOL HORNICKÝ}},
 	publisher = {VYSOKÉ UČENÍ TECHNICKÉ V BRNĚ, FAKULTA INFORMAČNÍCH TECHNOLOGIÍ, VEDOUCÍ PRÁCE Ing. ALEŠ SMRČKA, Ph.D},
     title = {NÁSTROJ NA TESTOVÁNÍ SÍŤOVÝCH APLIKACÍ},
     year = {2012},
