--- a/texts/xchrip00_sep-20-literatura-bibliography.bib
+++ b/texts/xchrip00_sep-20-literatura-bibliography.bib
@@ -140,12 +140,16 @@
     urldate = {2018.01.14}
   }
 
-  @TechReport{TR_TARZAN,
- 	author = {{Radek Hranický, Lukáš Zobal, Vojtěch Večeřa}},
-  	title = {Distribuovaná obnova hesel},
-	year = {2017},
-	note = {Technická zpráva č. FIT-TR-2017-04}
-  }
+@TECHREPORT{TR_TARZAN,
+   author = {Radek Hranick{\'{y}} and Luk{\'{a}}{\v{s}} Zobal and
+   	Vojt{\v{e}}ch Ve{\v{c}}e{\v{r}}a},
+   title = {Distribuovan{\'{a}} obnova hesel},
+   pages = {14},
+   year = {2017},
+   location = {FIT-TR-2017-04, CZ},
+   language = {czech},
+   url = {http://www.fit.vutbr.cz/research/view_pub.php.cs?id=11568}
+}
 
   @ONLINE{unittest,
     publisher = "Python Software Foundation",
