--- a/bakalar/xchrip00_sep.tex
+++ b/bakalar/xchrip00_sep.tex
@@ -108,6 +108,10 @@
 \newtheorem*{definition}{Definícia}
 \def\checkmark{\tikz\fill[scale=0.4](0,.35) -- (.25,0) -- (1,.7) -- (.25,.15) -- cycle;} 
 
+\makeatletter
+\newcommand\footnoteref[1]{\protected@xdef\@thefnmark{\ref{#1}}\@footnotemark}
+\makeatother
+
 % Informace cls práci/projektu / Information about the thesis
 %---------------------------------------------------------------------------
 \projectinfo{
