--- a/bakalar/xchrip00_sep.tex
+++ b/bakalar/xchrip00_sep.tex
@@ -136,20 +136,17 @@
   supervisor.title.p={Ing.},   %titul před jménem (nepovinné) / title before the name (optional)
   supervisor.title.a={},    %titul za jménem (nepovinné) / title after the name (optional)
   % Klíčová slova / keywords
-  keywords.cs={Fitcrack, BOINC, testovanie, jednotkové testy, integračné testy}, % klíčová slova v českém či slovenském jazyce / keywords in czech or slovak language
-  keywords.en={Fitcrack, BOINC, testing, unit testing, integration testing}, % klíčová slova v anglickém jazyce / keywords in english
+  keywords.cs={Fitcrack, BOINC, testovanie, automatizované testy, jednotkové testy, integračné testy, testovanie založené na požiadavkách, Python, SQL Alchemy}, % klíčová slova v českém či slovenském jazyce / keywords in czech or slovak language
+  keywords.en={Fitcrack, BOINC, testing, automated tests, unit testing, integration testing, requirement-based testing, Python, SQL Alchemy}, % klíčová slova v anglickém jazyce / keywords in english
   % Abstrakt / Abstract
-  abstract.cs={Táto práca si kladie za cieľ navrhnúť a implementovať automatizované testy pre systém Fitcrack, distribuovaný systém na lámanie hesiel.
-Testy musia byť takisto distribuované a prenositeľné, keďže časť systému pracuje na klientských zariadeniach. 
-Pre väčšie pokrytie testovacích prípadov sú použité viaceré techniky testovania. 
-V práci je rozobraná teória fungovania systému Fitcrack, ako aj požiadavky na testy, teória prístupov k testovania a ich jednotlivý prínos pri odhaľovaní chýb.
-Práca ďalej obsahuje návrh systémových testov s ohľadom na zistenia cls fungovaní systému Fitcrack.
-\todo{Prečítať a prerobiť.}}, % abstrakt v českém či slovenském jazyce / abstract in czech or slovak language
-  abstract.en={This thesis aims to design and implement automated tests for Fitcrack, distributed password cracking system. 
-Tests also have to be distibuted and cross-platform, as part of the system operates on client's machine.
-For better code coverage multiple testing technics are combined.
-In thesis is discussed Fitcrack functioning theory as well as requirements for tests, software testing principles and their contribution to error detection.
-Thesis further includes Fitcrack tests design with consideration for findings about Fitcrack.}, % abstrakt v anglickém jazyce / abstract in english
+  abstract.cs={Práca si kladie za cieľ navrhnúť a implementovať automatizované testy pre systém Fitcrack, distribuovaný systém na lámanie hesiel založený na platforme Boinc.
+  Je využité testovanie so znalosťou zdrojových kódov, konkrétne testovanie založené na požiadavkách.
+  Na začiatku práce sú vysvetlené všeobecné praktiky testovania, potom nasleduje kapitola o testovaní založenom na požiadavkách, ktorá je základom praktickej časti.
+Práca ďalej obsahuje popis architektúry systému Fitcrack, návrh testov a vybrané detaily samotnej implementácie.}, % abstrakt v českém či slovenském jazyce / abstract in czech or slovak language
+  abstract.en={This thesis aims to design and implement automated tests for Fitcrack, distributed password cracking system based on Boinc platfrom. 
+  White-box testing is used, specifically requirements-based testing.
+  At the begining of the thesis, general testing practices are explained, followed by principles of requirement based testing which is the basis of practical part.
+  Thesis also includes a description of the Fitcrack architecture, the design of tests, and selected details of the implementation itself.}
   % Prohlášení (u anglicky psané práce anglicky, u slovensky psané práce slovensky) / Declaration (for thesis in english should be in english)
   declaration={Prehlasujem, že som túto bakalárskou prácu vypracoval samostatne pod vedením pana Ing. Radka Hranického.
 %Další informace mi poskytli...
