--- a/bakalar/kapitoly/xchrip00_sep-01-uvod.tex
+++ b/bakalar/kapitoly/xchrip00_sep-01-uvod.tex
@@ -1,17 +1,17 @@
 \chapter{Úvod}
 Softvér. \\
-Pri tomto slove si každý predstaví nejakú inú aplikácia, či už mobilnú na prezeranie a upravovanie fotografií, mzdový systém určený pre používanie na osobných počítačoch, hru pre konzoly, alebo webovú stránku na ktorej sa snažíme nájsť odpovede na tie najzavážnejšie otázky ľudstva.
-Dnes existuje priam až nespočetné množstvo rôznych softvérou určených na rôzne použitie na rôznych platformách, no len málokto si uvedomuje čo všetko sa skrýva za tou peknou obrazovkou, na ktorú sa každý deň pozeráme.
+Pri tomto slove si každý predstaví nejakú inú aplikácia, či už mobilnú na prezeranie a upravovanie fotografií, mzdový systém určený pre používanie na osobných počítačoch, hru pre konzoly, alebo webovú stránku na ktorej sa snažíme nájsť odpovede na tie najzávažnejšie otázky ľudstva.
+Dnes existuje priam až nespočetné množstvo rôznych softvérov určených na rôzne použitie na rôznych platformách, no len málokto si uvedomuje čo všetko sa skrýva za tou peknou obrazovkou, na ktorú sa každý deň pozeráme.
 Asi každý používateľ softvéru sa už stretol stým, že sa softvér nechoval tak, ako by sa mal a pri tom počte nových aplikácii a rýchlosti vývoja softvéru to vôbec nie je nečakané. 
-Vývoj sofvéru sa za posledné roky veľmi zjednodušil a tým pádom sa na ňom môže podieľať obrovské množstvo ľudí, keďže už nemusia byť odborníci ako tomu bolo v minulosti.
-Firmy vyíjajúce softvér častokrát upredňostňujú rýchlosť vývoja pred kvalitou produktu.
-Správne naplanovaný vývoj aplikácie dokáže aj napriek týmto faktorom zlepšiť kvalitu produktu, no to ako správne odhadnúť náklady časové, finančné, či ľudské je náročné a na prvý pohľad zbytočné.
+Vývoj softvéru sa za posledné roky veľmi zjednodušil a tým pádom sa na ňom môže podieľať obrovské množstvo ľudí, keďže už nemusia byť odborníci ako tomu bolo v minulosti.
+Firmy vypínajúce softvér častokrát uprednostňujú rýchlosť vývoja pred kvalitou produktu.
+Správne naplánovaný vývoj aplikácie dokáže aj napriek týmto faktorom zlepšiť kvalitu produktu, no to ako správne odhadnúť náklady časové, finančné, či ľudské je náročné a na prvý pohľad zbytočné.
 Ďalšia možnosť, ktorá môže zlepšiť kvalitu softvéru je testovanie.
 V súčastnosti je testovanie považované za samozrejmú súčasť vývoja softvéru, no v praxi to vôbec nemusí byť samozrejmosť, aj keď všetky vyššie spomenuté faktory len potvrdzujú potrebu testovať.
 
-Všetci chceme, aby boli naše dáta v bezpečí, preto používamé heslá, no niekedy sa stane, že heslo zabudneme, alebo je potrebné zistiť obsah súborov, ktoré sú spájané s trestnou činnosťou.
+Všetci chceme, aby boli naše dáta v bezpečí, preto používame heslá, no niekedy sa stane, že heslo zabudneme, alebo je potrebné zistiť obsah súborov, ktoré sú spájané s trestnou činnosťou.
 Jediný spôsob ako prelomiť takéto zabezpečenie je skúšanie hesiel.
-Tento proces sa dá ľahko automatizovať, no počet možností sa môže pohybovať v miliardách a prelomenie zložitejšieho hesla aj na výkonných počítach by mohlo trvať roky.
+Tento proces sa dá ľahko automatizovať, no počet možností sa môže pohybovať v miliardách a prelomenie zložitejšieho hesla aj na výkonných počítačoch by mohlo trvať roky.
 Riešením by mohol byť systém, ktorý túto úlohu rozdelí na veľa malých úloh a do výpočtu zahrnie veľké množstvo bežných osobných počítačov.
 To je hlavný cieľ systému Fitcrack.
 
@@ -21,8 +21,10 @@ Veľké firmy samozrejme majú postupy, ktorých sa držia, no menšie firmy mô
 Preto je aj pre túto prácu dôležité zvoliť správny postup testovania.
 Niektoré z~najväčších softvérových firiem dokonca pokladajú testovanie za tak dôležité, že vyvinuli modely životného cyklu vývoja softvéru postavené na testovaní.
 
-\todo{Cieľom nie je otestovať všetko} \\
-V~prvých dvoch kapitolách je preto rozobraná problematika vývoja a testovania softvéru.
-Tretia kapitola je venovaná požiadavkám na testy.
+Fitcrack je rozsiahly systém postavený na platforme BOINC pozostávajúci z niekoľkých komponentov, ktoré stále pribúdajú a vyvíjajú sa.
+Táto práca si preto neberie za úlohu kompletne otestovať Fitcrack, ale skôr postaviť pevné základy testovania založenom na požiadavkách a poskytnúť vývojárom systému Fitcrack návod, príklady a testy základných funkcií systému.
+
+V~druhe kapitole je preto rozobraná problematika vývoja a testovania softvéru.
+Tretia kapitola je venovaná požiadavkám na testy,
 Práca ďalej obsahuje popis jednotlivých súčastí systému Fitcrack z~ohľadom na dôležitosť informácii pri návrhu a implementácii testov pre tento systém, návrh testov pre systém Fitcrack, popis implementácie testov, zhrnutie dosiahnutých zistení pri testovaní systému a popis práce do budúcnosti.
 
