--- a/bakalar/kapitoly/xchrip00_sep-03-poziadavky.tex
+++ b/bakalar/kapitoly/xchrip00_sep-03-poziadavky.tex
@@ -21,14 +21,13 @@ Testovacia sada by sa mala tvoriť na základe predom predom zvoleného kritéri
 Kritérium pokrytia definujú požiadavky na testy, test requirements (TR).
 Množina požiadavkou na testy daného kritéria pokrytia môže byť väčšia než testovacia sada spĺňajúca pokrytie.
 Jeden testovací prípad môže uspokojiť/pokryť niekoľko testovacích požiadavkou.
-Existujú rôzne kritéria pokrytia zaoberajúcimi sa rôznými artefaktmi a sú rôzne silné.
+Existujú rôzne kritéria pokrytia zaoberajúcimi sa rôznými artefaktmi a sú rôzne silné~\cite{Smrcka}.
 
 \begin{definition}
 Kritérium $C_1$ zahŕňa kritérium $C_2 \,(C_1 > C_2)$, práve vtedy, keď každá testovacia sada splňajúca kritérium $C_1$ tiež spĺňa kritérium $C_2$.
 \end{definition}
 
 \section{Testovanie založené na prechode grafu}
-\todo{Rozdelenie do kapitol, usporiadanie}\\
 Graf je jedna z najpouživanejších štruktúr pre abstrakciu, hlavne preto, lebo je dobre definová, veľmin názorná a je jednoduché ňom niečo jasne vyjadriť.
 V testovaní poznáme niekoľko typov grafu, každý z nich testuje systém iným spôsobom~\cite{graph_testing}:
 \begin{itemize}
@@ -494,9 +493,6 @@ Preto definujeme zoskupenie týchto množín:
 	\caption{Vzťah kritérii pokrytia.}
 \end{figure}
 
-%\subsection{Logické výrazy}
-%\todo{testovanie logických výrazov}
-% netreba to tam
 \section{Vstupné domény}
 \label{vstupne_domeny}
 \textbf{Vstupná doména} (doména vstupu, priestor, input space) je množina všetkých vstupov systému.
@@ -536,7 +532,7 @@ Každá správna charakteristika definuje rozklad domény ($q$), ktorý musí sp
 			$\underset{b \in B_q}{\bigcup} b = D$
 		\end{center}
 \end{itemize}
-\todo{Napíš nejaké vysvetlenie a tak}\\
+%todo Napíš nejaké vysvetlenie a tak
 
 \subsection*{Model vstupných domén}
 \label{model_domen}
@@ -546,18 +542,51 @@ Pre každú charakteristiku rozkladá domény na jednotlivé bloky.
 Každý blok predstavuje množinu hodnôt vstupov SUT.
 Tieto hodnoty sú z hľadiska testov považované za rovnocenné.
 
+\pagebreak[3]
 \subsection*{Kritéria pokrytia vstupných domén}\
 \label{kriteria_pokrytia_domen}
+Ako príklad k rôznych kritériam budú použité 3 rozklady s blokmi:
+		\begin{equation}
+			q_1 = \{A, B\},\quad q_2 = \{1, 2, 3\},\quad q_3 = \{x, y\}
+		\end{equation}
 \begin{itemize}
-	\item Kritérium pokrytia všetkých kombinácii \textbf{All Combinations Coverage (ACoC)} vyžaduje, aby TR obsahovali všetky kombinácie blokov zo všetkých charakteristík.
-		\todo{príklad}\\
-	\item Kritérium pokrytia každého bloku \textbf{Each Choice Coverage (ECC)} vyžaduje, aby TR obsahovali každý blok re každú charakteristiku.
-		\todo{príklad}\\
+	\item Kritérium pokrytia všetkých kombinácii \textbf{All Combinations Coverage (ACoC)} vyžaduje, aby TR obsahovali všetky kombinácie blokov zo všetkých charakteristík. 
+		Napríklad: 3 rozklady s blokmi:
+		TR bude obsahovať týchto 12 požiadavkov:
+		\begin{eqnarray*}
+			(A, 1, x) \qquad (A, 1, y) \qquad (B, 1, x) \qquad (B, 1, y) \\
+			(A, 2, x) \qquad (A, 2, y) \qquad (B, 2, x) \qquad (B, 2, y) \\
+			(A, 3, x) \qquad (A, 3, y) \qquad (B, 3, x) \qquad (B, 3, y) \\
+		\end{eqnarray*}
+	\item Kritérium pokrytia každého bloku \textbf{Each Choice Coverage (ECC)} vyžaduje, aby TR obsahovali každý blok pre každú charakteristiku.
+		Testovacia sada $T = \{t_1, t_2, t_3\}$:
+		\begin{eqnarray*}
+			t_1 = (A, 1, x)
+			t_2 = (B, 2, y)
+			t_3 = (B, 3, y)
+		\end{eqnarray*}
 	\item Kritérium pokrytia všetkých párov blokov \textbf{Pair-Wise Coverage (PWC)} vyžaduje, aby TR obsahovali každý blok každej charakteristiky a každý pár blokov každý z inej charakteristiky.
-		\todo{príklad}\\
+		TR bude obsahovať týchto 16 požiadavkov:
+		\begin{eqnarray*}
+			(A, 1) \qquad (B, 1) \qquad (1, x) \qquad (1, y) \\
+			(A, 2) \qquad (B, 2) \qquad (2, x) \qquad (2, y) \\
+			(A, 3) \qquad (B, 3) \qquad (3, x) \qquad (3, y) \\
+			(A, x) \qquad (A, y) \qquad (B, x) \qquad (B, y) \\
+		\end{eqnarray*}
+		Stačí testovacia sada:
+		\begin{eqnarray*}
+			t_1 : (A, 1, x) \quad t_2 : (A, 2, x) \quad t_3 : (A, 3, x) \quad t_4 : (A, -, y) \\
+			t_5 : (B, 1, y) \quad t_6 : (A, 2, y) \quad t_7 : (B, 3, y) \quad t_8 : (B, -, x) \\
+		\end{eqnarray*}
 	\item PWC je možné zobecniť na \textbf{T-Wise Coverage} (nie dvojice, aby T-tice blokov).
 	\item Kritérium pokrytia bázových blokov \textbf{Base Choice Coverage (BCC)} vyžaduje, aby TR obsahovali kombinácie všetkých bázových blokov každej charakteristiky a každý jeden nebázový blok v kombinácii s bázovými blokmi.
-		\todo{príklad}\\
+		Bázové bloky(typické bloky): $A, 1, x$
+
+		TR bude obsahovať požiadavok: $(A, 1, x)$  a nasledujúce:
+		\begin{equation}
+			(B, 1, x), \quad (A, 2, x), \quad (A, 3, x), \quad (A, 1, y)
+		\end{equation}
+
 \end{itemize}
 
 \begin{figure}[H]
@@ -621,6 +650,10 @@ V testovacej komunite sú najpoužívanejšie Stub a Mock objekty.
 			\item Nezáleží na vstupoch, stále vráti preddefinovanú hodnotu (objekt).
 			\item Nemôže spôsobiť zlyhanie testu.
 			\item Vzor \texttt{State Verification\footnote{\url{http://xunitpatterns.com/State\%20Verification.html}}} -- overuje sa výsledný stav SUT.
+				\begin{figure}[H]
+					\centering
+					\includegraphics[width=0.4\linewidth]{obrazky/state_verification.png}
+				\end{figure}
 		\end{itemize}
 	\item[Mocks]
 		\label{mock}
@@ -628,6 +661,9 @@ V testovacej komunite sú najpoužívanejšie Stub a Mock objekty.
 			\item Kontroluje vstupy a výstupné hodnoty posiela v závislosti na vstupných hodnotách.
 			\item Môže spôsobiť zlyhanie testu.
 			\item Vzor \texttt{Behavior Verification\footnote{\url{http://xunitpatterns.com/Behavior\%20Verification.html}}} -- overuje sa tiež vnútorné chovanie SUT.
+				\begin{figure}[H]
+					\centering
+					\includegraphics[width=0.4\linewidth]{obrazky/behavior_verification.png}
+				\end{figure}
 		\end{itemize}
 \end{description}
-\todo{Čorknút obrázky k tým verifications} \\
