--- a/bakalar/xchrip00_bp-30-prilohy-appendices.tex
+++ b/bakalar/xchrip00_bp-30-prilohy-appendices.tex
@@ -2,6 +2,7 @@
 \label{cd}
 Priložené CD obsahuje:
 \begin{itemize}
+	\item \texttt{xchrip00\_bp.tex} -- táto práca,
 	\item \texttt{test\_generator.py} -- testovacia sada modulu Generator,
 	\item \texttt{test\_assimilator.py} -- testovacia sada modulu Asimilator,
 	\item \texttt{test\_runner.py} -- testovacia sada modulu Runner,
