--- a/bakalar/xchrip00_bp-30-prilohy-appendices.tex
+++ b/bakalar/xchrip00_bp-30-prilohy-appendices.tex
@@ -1,6 +1,6 @@
 \chapter{Obsah CD}
 \label{cd}
-Priložené CD obsahuje:
+Priložené CD obsahuje súbory:
 \begin{itemize}
 	\item \texttt{xchrip00\_bp.tex} -- táto práca,
 	\item \texttt{test\_generator.py} -- testovacia sada modulu Generator,
@@ -18,6 +18,7 @@ Priložené CD obsahuje:
 			\item \texttt{models.py} -- obsahuje mapovanie objektov frameworku SQL Alchemy na tabuľky databázy,
 			\item \texttt{service.py} -- funkcie pracujúce s týmito objektmi.
 		\end{itemize}
-	\item README.md -- pokyny ako nainštalovať a spúšťať testy.
+	\item \texttt{api\_docs.html} -- interaktívna dokumentácia API~\cite{Mucka},
+	\item \texttt{README.md} -- pokyny ako nainštalovať a spúšťať testy.
 \end{itemize}
 
